fix to overflow on current show slider

--- a/client/themes/10a/content/content.import.less
+++ b/client/themes/10a/content/content.import.less
@@ -9,3 +9,7 @@
 h1, h2, h3, h4, h5, h6{
     font-family: "aktiv-grotesk", sans-serif;
 }
+
+.show-swiper-container{
+    overflow: hidden;
+}
